fixed spacing

--- a/project.css
+++ b/project.css
@@ -1,10 +1,11 @@
 body {
     font-family: "Playfair Display", serif;
     font-size: 22px; /* Litt økt fontstørrelse */
-    max-width: 70%;
+    max-width: 60%;
     margin: 0 auto;
     padding: 20px;
     line-height: 1.6;
+    background-color: #f8f8f8;
 }
 a {
     color: #000;
